[package]
name = "resonite"
version = "0.3.4"
edition = "2021"
license = "MPL-2.0"
authors = ["ljoonal"]
description = "Resonite's API in rust"
repository = "https://github.com/onlivfe/resonite_rs"
documentation = "https://docs.rs/resonite"
keywords = ["resonite", "api", "socialvr"]
categories = ["api-bindings", "games"]

include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[badges]
maintenance = { status = "experimental" }

[lib]
name = "resonite"
path = "src/lib.rs"
crate-type = ["lib", "dylib"]

[[bin]]
name = "auth-helper"
path = "src/bin/auth-helper.rs"
test = false
bench = false

[[bin]]
name = "sessions-scraper"
path = "src/bin/sessions-scraper.rs"
test = false
bench = false

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
test = false
bench = false

[features]
default = []
http_client = ["tokio", "governor", "reqwest", "racal/reqwest", "async-trait"]
signalr_client = ["http_client", "tokio", "ezsockets", "tokio-stream", "http", "tokio-tungstenite", "async-trait"]
rand_util = ["nanorand"]
nanoserde_bin = ["nanoserde", "nanoserde/binary"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["json", "time_0_3"] }
serde_json = { version = "1.0.134" }
time = { version = "0.3.37", default-features = false, features = [
  "serde-well-known",
] }
strum = { version = "0.26.3", features = ["derive"] }

# API client specifics
racal = "0.5.0"
#racal = { path = "../racal", features = ["reqwest"] }

nanorand = { version = "0.7.0", optional = true }

governor = { version = "0.8.0", optional = true }

tokio = { version = "1.42.0", optional = true, features = ["macros"]}
tokio-stream = { version = "0.1.17", optional = true}
http = { version = "1.2.0", optional = true }
async-trait = { version = "0.1.83", optional = true }
# Required to be defined by us since ezsockets doesn't expose a TLS feature
tokio-tungstenite = {version = "0.26.1", optional= true, default-features = false, features = ["rustls-tls-webpki-roots"] }
nanoserde ={ version = "0.2.0-beta.0", default-features = false, features = ["std"], optional = true }

[dependencies.reqwest]
optional = true
version = "0.12.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.ezsockets]
optional = true
version = "0.6.4"
default-features = false
features = ["client", "native_client", "rustls"]

[dev-dependencies]
tokio-test = "0.4.4"
tokio = { version = "1.42.0", features = ["rt", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "nightly"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }
